// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownSearch /> should be controllable 1`] = `
[
  <div
    data-testid="option"
  >
    <span
      class="highlightedLabel"
    >
      BA
    </span>
    <span
      class="subLabel"
    >
      r
    </span>
  </div>,
  <div
    data-testid="option"
  >
    <span
      class="highlightedLabel"
    >
      BA
    </span>
    <span
      class="subLabel"
    >
      z
    </span>
  </div>,
]
`;

exports[`<DropdownSearch /> should clear the query when unmounting 1`] = `
[
  <div
    data-testid="option"
  >
    Foo
  </div>,
  <div
    data-testid="option"
  >
    Bar
  </div>,
  <div
    data-testid="option"
  >
    Baz
  </div>,
]
`;

exports[`<DropdownSearch /> should filter and highlight the results when searching 1`] = `
[
  <div
    data-testid="option"
  >
    <span
      class="highlightedLabel"
    >
      ba
    </span>
    <span
      class="subLabel"
    >
      r
    </span>
  </div>,
  <div
    data-testid="option"
  >
    <span
      class="highlightedLabel"
    >
      ba
    </span>
    <span
      class="subLabel"
    >
      z
    </span>
  </div>,
]
`;

exports[`<DropdownSearch /> should render 1`] = `
<body>
  <div>
    <div />
    <div>
      toggle
    </div>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r1:"
  >
    <div
      class="overlay"
      data-testid="floating-overlay"
      style="position: fixed; overflow: auto; top: 0px; right: 0px; bottom: 0px; left: 0px;"
    >
      <div
        class="wrapper"
        style="left: 0px; position: absolute; top: 0px;"
      >
        <div
          class="wrapper"
        >
          <div
            class="wrapper"
          >
            <span
              class="prefix"
            >
              <i
                class="material-icons icon"
              >
                search
              </i>
            </span>
            <input
              class="input"
              data-resizable="false"
              id="input-text-1"
              name="input-text-1"
              placeholder="Search"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          data-testid="option"
        >
          Foo
        </div>
        <div
          data-testid="option"
        >
          Bar
        </div>
        <div
          data-testid="option"
        >
          Baz
        </div>
      </div>
    </div>
  </div>
</body>
`;
